Corrigiendo enlace de whatsapp

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a target="_blank" href="https://www.google.com/search?q=SAN+GABRIEL+HOSPITAL+VETERINARIO&oq=san&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgYIARBFGDkyBggCEEUYOzIGCAMQRRg7MgYIBBBFGD0yBggFEEUYPDIGCAYQRRg8MgYIBxAuGEDSAQgxMzg5ajBqMagCALACAA&sourceid=chrome&ie=UTF-8" class="boton"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             <a target="_blank" href="https://www.facebook.com/hostpitalvetsangabriel/?locale=es_LA" class="boton"><i class="fa-brands fa-facebook-f"></i></a>
             <a target="_blank" href="https://www.instagram.com/sangabrielhv/?hl=es" class="boton"><i class="fa-brands fa-instagram"></i></a>
-            <a href="wa.me/+573054460425" class="boton"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://wa.me/+573054460425" class="boton"><i class="fa-brands fa-whatsapp"></i></a>
         </section>
 
         <div class="flecha"><i class="fa-solid fa-arrow-down"></i></div>
